--- a/intro_qqplot.qmd
+++ b/intro_qqplot.qmd
@@ -51,8 +51,238 @@ ggplot() +
   geom_point(
     mapping = aes(x = disp, y = mpg,
                   shape = factor(cyl),
-                  colour = factor(cyl)
+                  colour = factor(am),
+                  size = qsec,
+                  alpha = wt
                   ),
     data = mtcars
   )
+```
+
+```{r}
+ggplot() +
+  geom_point(
+            data = mtcars,
+             mapping = aes(
+               x = disp, 
+               y = mpg, 
+               colour = factor(cyl), 
+               alpha = 3.6*(0.25*1609.347)/qsec,
+               shape = factor(ifelse(am, "Man", "Aut"))
+               ), 
+            size = 4
+             ) +   
+    labs(
+      colour = "cyl", 
+      alpha = "speed\n(km/h)", 
+      shape = "trans-\nmission"
+      )
+```
+
+```{r}
+ggplot() +
+  geom_point(
+    data = mtcars,
+    mapping = aes(
+      x = disp,
+      y = mpg, 
+      colour = factor(cyl), 
+      size = 3.6*(0.25*1609.347)/qsec, 
+      shape = factor(
+        # Note codeing am
+        # 0 automatic, 1 manual
+        ifelse(
+          am, 
+          "Aut", 
+          "Man"
+          )
+        )
+      )
+    ) +
+  labs(
+    colour = "cyl", 
+    size = "speed\n(km/h)", 
+    shape = "trans-\nmission"
+    ) +
+  geom_smooth(
+    data = mtcars, 
+    mapping = aes(x = disp, y = mpg), 
+    span = 0.5, 
+    level = 0.99
+    ) +
+  geom_smooth(
+    data = mtcars,
+    mapping = aes(x = disp, y = mpg),
+    span = 0.5,
+    level = 0.95
+    ) +
+  geom_smooth(
+    data = mtcars,
+    mapping = aes(x = disp, y = mpg),
+    method = lm,
+    colour = "black",
+    se = FALSE
+  )
+```
+
+```{r}
+## create tibble from scratch
+df_mean <-   tibble(
+  cyl = c("avg. car 4 cyl.", "avg. car 6 cyl.", "avg. car 8 cyl."), 
+  mpg = c(22.66, 17.74, 15.10), 
+  disp = c(105.14, 183.31, 353.10)
+  )
+```
+
+```{r}
+ggplot(
+  data = mtcars, 
+  mapping = aes(x = disp, y = mpg)
+  ) +
+  geom_point(
+    mapping = aes(colour = factor(cyl))
+    ) +
+  geom_smooth(
+    method = "lm", 
+    se = FALSE
+    ) +
+  geom_smooth(
+    method = MASS::rlm, 
+    colour = 'Red', 
+    se = FALSE
+    ) +
+  geom_point(
+    data = df_mean, 
+    mapping = aes(x = disp, y = mpg), 
+    colour = "black", 
+    size = 3
+    ) +
+  geom_text(
+    data = df_mean, 
+    mapping = aes(x = disp, y = mpg, label = cyl), 
+    colour = "black", 
+    vjust = 1.5
+    )
+```
+
+```{r}
+p_common <- ggplot(
+  data = mtcars, 
+  mapping = aes(x = disp, y = mpg)
+  ) +
+  geom_point(
+    aes(colour = factor(cyl))
+    ) +
+  geom_smooth(
+    method = "lm", 
+    se = FALSE
+    ) +
+  geom_smooth(
+    method = MASS::rlm, 
+    colour = 'Red', 
+    se = FALSE
+    ) +
+  geom_point(
+    data = df_mean, 
+    mapping = aes(x = disp, y = mpg), 
+    colour = "black", 
+    size = 3
+    ) +
+  labs(colour = "cyl") +
+  theme(legend.position = "bottom")
+```
+
+```{r}
+# update a ggplot object
+
+# add text labels by geom_text
+p1 <- p_common +  
+  geom_text(
+    data = df_mean, 
+    mapping = aes(x = disp, y = mpg, label = cyl),
+    colour = "black", 
+    vjust = 1.5, 
+    hjust = 0.2
+    )
+# add text labels by geom_label
+p2 <-   p_common +  
+  geom_label(
+    data = df_mean, 
+    mapping = aes(x = disp, y = mpg, label = cyl), 
+    colour = "black", 
+    vjust = 1.5, 
+    hjust = 0.2, 
+    alpha = 0.25
+    ) +
+  theme(legend.position = "bottom") +  
+  labs(colour = "cyl")
+```
+
+```{r}
+# ggpubr makes it easy to place 
+# two objects side by side
+ggarrange(
+  p1, 
+  p2, 
+  ncol = 2, 
+  nrow = 1, 
+  labels = c(
+    "geom_text()",
+    "geom_label()"
+    )
+  )
+```
+
+```{r}
+cp1 <-   ggplot() +
+  geom_point(
+    data = mtcars, 
+    mapping = aes(
+      x = hp, 
+      y = wt,
+      colour = 1609.347/(2*qsec^2)
+      ),
+    size = 4) +
+  geom_text(
+    data = mtcars, 
+    mapping = aes(x = hp, y = wt, label = rownames(mtcars)),
+    colour = "black", 
+    size = 2, 
+    hjust = 0.7, 
+    vjust = 3
+    ) +
+  labs(
+    size = "Average\nacceleration", 
+    colour = "Average\nacceleration"
+    ) +
+  geom_smooth(
+    data = mtcars, 
+    mapping = aes(x = hp, y = wt), 
+    method = "lm", 
+    se = FALSE
+    ) +
+  theme_classic()
+#  scale_size_continuous(range = c(3, 12), 
+#  breaks = seq(1, 5, by=0.25)) +
+```
+
+```{r}
+ggplot(
+  data = mtcars, 
+  mapping = aes(
+    x = hp, 
+    y = 1609.347/(2*qsec^2)
+    )
+  ) +
+  facet_wrap(~cut_number(wt, n =3)) +
+  geom_point(
+    aes(colour = cut_number(
+      wt, 
+      n = 3)
+      )
+    ) +
+  geom_smooth(
+    method = "lm", 
+    se = FALSE
+    )
 ```
