--- a/intro_qqplot.qmd
+++ b/intro_qqplot.qmd
@@ -1,6 +1,6 @@
 ---
 title: "ggplot"
-format: html
+format: pdf
 editor: visual
 ---
 
@@ -11,6 +11,7 @@ editor: visual
 #| message: false
 library(tidyverse)
 library(ggpubr)
+library(nycflights13)
 ```
 
 ## Intro ggplot
@@ -285,4 +286,48 @@ ggplot(
     method = "lm", 
     se = FALSE
     )
+```
+
+## PxWebApiData
+
+```{r}
+# metadata_13891_no <- ApiData(
+ # "https://data.ssb.no/api/v0/no/table/13891/",
+  #returnMetaFrames = TRUE
+#)
+```
+
+```{r}
+# metadata_13891_no$Kjonn
+```
+
+```{r}
+#unemp99to02 <- ApiData(
+  #"http://data.ssb.no/api/v0/en/table/10540",
+  # Have not been able to specify more complex regions
+ # Region = list("11*"),
+ # Tid = c(paste(
+  #  rep(1999:2002, each = 12), 
+  #  "M",
+  #  sprintf("%02d", 1:12), 
+  #  sep = "")
+ #   )
+ # )
+```
+
+```{r}
+# metadata_10540_no$Tid
+```
+
+```{r}
+paste(
+  rep(1999:2002, each = 12),
+  "M",
+  sprintf("%02d", 1:12),
+  sep = ""
+)
+```
+
+```{r}
+
 ```
